<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_screen_title">My Nanodegree Apps!</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="built_it_bigger_app">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_myown_app">Capstone: My own app</string>
</resources>
